--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   </head>
   <body id="top">
     <header>
-      <h1>⚠️ Pas fini.</h1>
+      <h1>⚠️ Not done.</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
