waffle for ssh testing

--- a/templates/search.html
+++ b/templates/search.html
@@ -3,3 +3,8 @@
 {% block content %}
 {{ page.content | safe }}
 {% endblock content %}
+
+{% block scripts %}
+<script src="https://f5.maatt.fr/elasticlunr.min.js"></script>
+<script src="https://f5.maatt.fr/search_index.en.js"></script>
+{% endblock scripts %}
