chore: add search functionality

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,10 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-{{ page.content | safe }}
+<h2>Search</h2>
+<section>
+  <section class="modal" id="search-modal">
+    <div class="modal-card">
+      <section class="modal-card-body">
+        <div class="field mb-2">
+          <div class="control">
+            <input class="input" id="search" placeholder="Search this website." type="search" />
+          </div>
+        </div>
+        <div class="search-results">
+          <div class="search-results__items"></div>
+        </div>
+      </section>
+    </div>
+  </section>
+</section>
 {% endblock content %}
 
 {% block scripts %}
-<script src="https://f5.maatt.fr/elasticlunr.min.js"></script>
-<script src="https://f5.maatt.fr/search_index.en.js"></script>
+<script async src="{{ get_url(path='elasticlunr.min.js') }}"></script>
+<script async src="{{ get_url(path='search_index.en.js') }}"></script>
+<script async src="{{ get_url(path='search.js') }}"></script>
 {% endblock scripts %}
