--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-{{ page.content | safe }}
+<h2>{{page.title}}</h2>
+<article>
+	{{ page.content | safe }}
+</article>
 {% endblock content %}
