--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,44 +1,42 @@
-html,
-body {
-	font-family: Helvetica, Inter, sans-serif;
-	font-size: 1.075rem;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+html {
 	a { color: #2228E2; }
 	@media (prefers-color-scheme: dark) {
 		background: #191919;
 		color: #f3f3f3;
 		a {	color: #3FB9F1; }
-		footer { border-color: #fff; }
+		header, footer { border-color: #fff; }
 	}
 	@media (prefers-reduced-motion) { * { animation: none !important; } }
 }
 body {
-	max-width: 80%;
-	@media(min-width: 600px) { max-width: 60%; }
-	@media(min-width: 1000px) { max-width: 40%; }
+	font-family: Helvetica, Inter, sans-serif;
+	font-size: 1.075rem;
+	line-height: 1.5;
+	max-width: 80ch;
 	margin: 0 auto;
+	padding: 1em;
 }
 
-header > h1{ margin: 0; }
-nav ul {
-	display: flex;
-	list-style: none;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-	li {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		margin-top: .9rem;
-		margin-bottom: .9rem;
-		padding: .5rem;
-		&:first-child { padding-left: 0; }
-		&:last-child { padding-right: 0; }
+header {
+	h1 {
+		font-size: 1em;
 	}
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	nav > ul {
+		display: flex;
+		list-style: none;
+		text-align: center;
+		flex-wrap: wrap;
+		padding: 0;
+		margin: 0.67em -0.5rem;
+		li {
+			margin: 0 0.5rem;
+		}
+	}
+	border-bottom: 1px solid #000;
 }
 
 #search-modal {
