move categories page to home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Categories</h1>
 {% set index = get_section(path="_index.md") %}
 <ul>
 	{% for s in index.subsections %}
